[package]
name = 'myriad'
description = 'A new Cumulus FRAME-based Substrate node, ready for hacking.'
version = '1.0.0'
edition = '2018'
license = 'Unlicense'
homepage = 'https://www.myriad.social/'
repository = 'https://github.com/irmannmal/myriad'
authors = ['Myriad <1@myriad.social>']

[profile.release]
panic = 'unwind'

[workspace]
members = [
    'node',
    'pallets/*',
    'runtime',
]
