[package]
name = 'myriad-runtime'
version = '1.0.0'
edition = '2018'
license = 'AGPL-3.0'
authors = ['Myriad Dev Team <myriad.dev@blocksphere.id>']
homepage = 'https://myriad.social'
repository = 'https://github.com/myriadsocial/myriad-node'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[build-dependencies]
substrate-wasm-builder = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.12' }

[dependencies]
# External Dependencies
codec = { package = 'parity-scale-codec', version = '2.0.0', default-features = false, features = ['derive'] }
hex-literal = { version = '0.3.3', optional = true }
log = { version = '0.4.14', default-features = false }
scale-info = { version = '1.0', default-features = false, features = ['derive'] }

# Substrate Dependencies
## Substrate Primitive Dependencies
beefy-primitives = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.12', default-features = false }
sp-api = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.12', default-features = false }
sp-block-builder = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.12', default-features = false }
sp-consensus-babe = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.12', default-features = false }
sp-core = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.12', default-features = false }
sp-inherents = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.12', default-features = false }
sp-offchain = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.12', default-features = false }
sp-runtime = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.12', default-features = false }
sp-session = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.12', default-features = false }
sp-staking = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.12', default-features = false }
sp-std = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.12', default-features = false }
sp-transaction-pool = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.12', default-features = false }
sp-version = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.12', default-features = false }

## Substrate Frame Dependencies
frame-benchmarking = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.12', default-features = false, optional = true }
frame-executive = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.12', default-features = false }
frame-support = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.12', default-features = false }
frame-system = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.12', default-features = false }
frame-system-benchmarking = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.12', default-features = false, optional = true }
frame-system-rpc-runtime-api = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.12', default-features = false }

## Substrate Pallet Dependencies
pallet-assets = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.12', default-features = false }
pallet-authorship = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.12', default-features = false }
pallet-babe = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.12', default-features = false }
pallet-balances = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.12', default-features = false }
pallet-beefy = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.12', default-features = false }
pallet-beefy-mmr = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.12', default-features = false }
pallet-grandpa = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.12', default-features = false }
pallet-im-online = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.12', default-features = false }
pallet-mmr = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.12', default-features = false }
pallet-mmr-primitives = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.12', default-features = false }
pallet-randomness-collective-flip = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.12', default-features = false }
pallet-session = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.12', default-features = false, features = ['historical'] }
pallet-sudo = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.12', default-features = false }
pallet-timestamp = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.12', default-features = false }
pallet-transaction-payment = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.12', default-features = false }
pallet-transaction-payment-rpc-runtime-api = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.12', default-features = false }

# Octopus Dependencies
## Octopus Pallet Dependencies
pallet-octopus-appchain = { git = 'https://github.com/octopus-network/octopus-pallets.git', branch = 'release-v0.9.12', default-features = false }
pallet-octopus-lpos = { git = 'https://github.com/octopus-network/octopus-pallets.git', branch = 'release-v0.9.12', default-features = false }
pallet-octopus-upward-messages = { git = 'https://github.com/octopus-network/octopus-pallets.git', branch = 'release-v0.9.12', default-features = false }

# Local Pallet
pallet-platform = { path = '../pallets/platform', default-features = false }
pallet-currency = { path = '../pallets/currency', default-features = false }
pallet-escrow = { path = '../pallets/escrow', default-features = false }

[features]
default = ['std']
std = [
	# External Dependencies
	'codec/std',
	'log/std',
	'scale-info/std',

	# Substrate Dependencies
	## Substrate Primitive Dependencies
	'beefy-primitives/std',
    'sp-api/std',
    'sp-block-builder/std',
    'sp-consensus-babe/std',
    'sp-core/std',
    'sp-inherents/std',
    'sp-offchain/std',
    'sp-runtime/std',
    'sp-session/std',
    'sp-staking/std',
    'sp-std/std',
    'sp-transaction-pool/std',
    'sp-version/std',

	## Substrate Frame Dependencies
	'frame-executive/std',
    'frame-support/std',
    'frame-system-rpc-runtime-api/std',
    'frame-system/std',

	## Substrate Pallet Dependencies
    'pallet-assets/std',
    'pallet-authorship/std',
    'pallet-babe/std',
    'pallet-balances/std',
    'pallet-beefy-mmr/std',
    'pallet-beefy/std',
    'pallet-grandpa/std',
    'pallet-im-online/std',
    'pallet-mmr-primitives/std',
    'pallet-mmr/std',
    'pallet-randomness-collective-flip/std',
    'pallet-session/std',
    'pallet-sudo/std',
    'pallet-timestamp/std',
    'pallet-transaction-payment-rpc-runtime-api/std',
    'pallet-transaction-payment/std',

	# Octopus Dependencies
	## Octopus Pallet Dependencies
	'pallet-octopus-appchain/std',
    'pallet-octopus-lpos/std',
    'pallet-octopus-upward-messages/std',

	# Local Pallet
	'pallet-platform/std',
	'pallet-currency/std',
	'pallet-escrow/std',
]
runtime-benchmarks = [
	# External Dependencies
	'hex-literal',

	# Substrate Dependencies
	## Substrate Primitive Dependencies
	'sp-runtime/runtime-benchmarks',

	## Substrate Frame Dependencies
	'frame-benchmarking',
    'frame-support/runtime-benchmarks',
    'frame-system-benchmarking',
    'frame-system/runtime-benchmarks',

	## Substrate Pallet Dependencies
	'pallet-assets/runtime-benchmarks',
	'pallet-babe/runtime-benchmarks',
	'pallet-grandpa/runtime-benchmarks',
	'pallet-im-online/runtime-benchmarks',
	'pallet-mmr/runtime-benchmarks',
    'pallet-balances/runtime-benchmarks',
    'pallet-timestamp/runtime-benchmarks',

	# Local Pallet
	'pallet-platform/runtime-benchmarks',
	'pallet-currency/runtime-benchmarks',
	'pallet-escrow/runtime-benchmarks',
]
